--- a/index.html
+++ b/index.html
@@ -746,6 +746,14 @@
                     <p>Layanan pemeliharaan dan dukungan teknis untuk memastikan aplikasi Anda selalu berjalan optimal.
                     </p>
                 </div>
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fa-solid fa-car-side"></i>
+                    </div>
+                    <h3>Marketing Agency</h3>
+                    <p>Layanan pembelian mobil baru dan bekas, dan pendanaan dana tunai BPKB mobil dan motor.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
